WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239626
Adjust SPI headers to fix build with non-internal SDK
https://bugs.webkit.org/show_bug.cgi?id=239626
Summary
Adjust SPI headers to fix build with non-internal SDK
Alex Christensen
Reported
2022-04-21 15:45:57 PDT
Adjust SPI headers to fix build with non-internal SDK
Attachments
Patch
(2.81 KB, patch)
2022-04-21 15:46 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2022-04-21 15:46:10 PDT
Created
attachment 458099
[details]
Patch
EWS
Comment 2
2022-04-22 09:38:05 PDT
Committed
r293228
(
249893@main
): <
https://commits.webkit.org/249893@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458099
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-22 09:39:15 PDT
<
rdar://problem/92170820
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug