Adjust SPI headers to fix build with non-internal SDK https://bugs.webkit.org/show_bug.cgi?id=239626

Patch by Alex Christensen <achristensen@webkit.org> on 2022-04-22
Reviewed by Chris Dumez.

* pal/spi/cocoa/PassKitSPI.h:
* pal/spi/mac/ScreenCaptureKitSPI.h:

Canonical link: https://commits.webkit.org/249893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293228 268f45cc-cd09-0410-ab3c-d52691b4dbfc