Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h
@@ -24,7 +24,7 @@
  */
 
 #if HAVE(PASSKIT_RECURRING_SUMMARY_ITEM)
-#if HAVE(PASSKIT_MODULARIZATION)
+#if HAVE(PASSKIT_MODULARIZATION) && USE(APPLE_INTERNAL_SDK)
 #import <PassKitCore/PKRecurringPaymentSummaryItem.h>
 #else
 #import <PassKit/PKRecurringPaymentSummaryItem.h>
@@ -32,7 +32,7 @@
 #endif
 
 #if HAVE(PASSKIT_DEFERRED_SUMMARY_ITEM)
-#if HAVE(PASSKIT_MODULARIZATION)
+#if HAVE(PASSKIT_MODULARIZATION) && USE(APPLE_INTERNAL_SDK)
 #import <PassKitCore/PKDeferredPaymentSummaryItem.h>
 #else
 #import <PassKit/PKDeferredPaymentSummaryItem.h>
